Bug 148148 - CRASH: Format - Text - Cycle Case (part 2)
Summary: CRASH: Format - Text - Cycle Case (part 2)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Warner
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on: 147196
Blocks:
  Show dependency treegraph
 
Reported: 2022-03-23 10:05 UTC by Xisco Faulí
Modified: 2022-05-18 19:45 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (11.30 KB, text/plain)
2022-03-23 19:01 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-03-23 10:05:24 UTC
this is a follow-up of bug 147196

Steps to reproduce:
1. Open attachment 107490 [details] from bug 80680
2. Select all
3. Format - Text - Cycle Case

-> Crash

Reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 4a46a74a3de0ac7df5d3ce949dda5e809c1729ab
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2022-03-23 10:06:03 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=de5aa409353c839483df21d47254fd2a508ab7d9

author	Michael Warner <michael.warner.ut+libreoffice@gmail.com>	2021-10-02 09:34:34 -0400
committer	Heiko Tietze <heiko.tietze@documentfoundation.org>	2022-02-01 11:16:27 +0100
commit de5aa409353c839483df21d47254fd2a508ab7d9 (patch)
tree eeb8829c7b191a6595438c1c64407b347a54d239
parent bace2e0a80b939f7b1c666cf669ae99bc8758f05 (diff)
tdf#144851 Honor Selection When Applying Title Case Format
 
Bisected with: bibisect-linux64-7.4

Adding Cc: to Michael Warner
Comment 2 Michael Warner 2022-03-23 14:09:52 UTC Comment hidden (off-topic)
Comment 3 Julien Nabet 2022-03-23 19:01:10 UTC
Created attachment 179057 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I got an assertion.
Comment 4 Michael Warner 2022-04-11 04:42:59 UTC
https://gerrit.libreoffice.org/c/core/+/132801/
Comment 5 Michael Warner 2022-05-11 12:52:31 UTC
The most annoying thing to me about LibreOffice is when I submit a patch and it sits in gerrit for weeks and weeks and weeks. Committers don't review it. I receive no feedback about it. Submitting a patch to fix a problem should be energizing, but waiting around for someone to merge it kills my enthusiasm for contributing to this project.
Comment 6 Xisco Faulí 2022-05-11 14:04:29 UTC
(In reply to Michael Warner from comment #5)
> The most annoying thing to me about LibreOffice is when I submit a patch and
> it sits in gerrit for weeks and weeks and weeks. Committers don't review it.
> I receive no feedback about it. Submitting a patch to fix a problem should
> be energizing, but waiting around for someone to merge it kills my
> enthusiasm for contributing to this project.

Sorry to hear that. Actually Heiko already reviewed it but it wasn't submitted. Will do it after jenkins passes
Comment 7 Julien Nabet 2022-05-11 19:08:34 UTC
(In reply to Michael Warner from comment #5)
> The most annoying thing to me about LibreOffice is when I submit a patch and
> it sits in gerrit for weeks and weeks and weeks. Committers don't review it.
> I receive no feedback about it. Submitting a patch to fix a problem should
> be energizing, but waiting around for someone to merge it kills my
> enthusiasm for contributing to this project.

I understand but depending on the category of patch, you can use https://wiki.documentfoundation.org/FindTheExpert to propose some people to review. For Android, there's no category but I noticed qt (so kde related part), you can ping Jan-Marek.
Also, if there's nobody to review a patch and you feel enough confident, you can push the patch on master. At worst, it can be reverted if a TB or someone complains if you don't find the cause.

Anyway, I've tested your patch and it worked perfectly! Thank you! :-)
Comment 8 Commit Notification 2022-05-11 21:00:49 UTC
Michael Warner committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/49ddbc94a088344bf69444445a0300342ea3f184

tdf#148148: Applying Title Case when selection contains only spaces

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Michael Warner 2022-05-12 01:36:22 UTC
(In reply to Julien Nabet from comment #7)
> (In reply to Michael Warner from comment #5)
> > The most annoying thing to me about LibreOffice is when I submit a patch and
> > it sits in gerrit for weeks and weeks and weeks. Committers don't review it.
> > I receive no feedback about it. Submitting a patch to fix a problem should
> > be energizing, but waiting around for someone to merge it kills my
> > enthusiasm for contributing to this project.
> 
> I understand but depending on the category of patch, you can use
> https://wiki.documentfoundation.org/FindTheExpert to propose some people to
> review. For Android, there's no category but I noticed qt (so kde related
> part), you can ping Jan-Marek.

Maybe next time I will give that list a try. It seems people who have most recently been involved in Cycle Case just don't want to look at it any more.

> Also, if there's nobody to review a patch and you feel enough confident, you
> can push the patch on master. At worst, it can be reverted if a TB or
> someone complains if you don't find the cause.

I'm pretty sure there are permissions set that prevent me from pushing to master, but even if I could...I wouldn't. 

> 
> Anyway, I've tested your patch and it worked perfectly! Thank you! :-)

Thanks :-)
Comment 10 BogdanB 2022-05-18 19:45:40 UTC
No crash in
Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: 75f7e057039aaa49558e22d18cad651d11589da9
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded