tdf#148148: Applying Title Case when selection contains only spaces

Previously, if the user's selection does not contain any word
characters, but the node does contain characters outside of
the user's selection, then searching for the word boundaries
when applying title case could result in start and end points
that were incorrect. In Writer this results in title case
being applied to non-selected characters. In Calc this results
in a debug assertion being hit.

This commit prevents those issues by skipping transliteration
on the node in this case.

Change-Id: I20c5ef44793741c5863f838c13ba222452346a97